2018.2/_sources/plugins/available/vsearch/uchime-denovo.txt
uchime-denovo: De novo chimera filtering with vsearch.
======================================================

.. raw:: html

   <div class="tabbed">
     <ul class="nav nav-tabs">
       <li class="active"><a data-toggle="tab" href="#cli">Command line interface</a></li>
       <li><a data-toggle="tab" href="#api">Artifact API</a></li>
     </ul>
     <div class="tab-content">
       <div id="cli" class="tab-pane fade in active">
         <pre>Usage: qiime vsearch uchime-denovo [OPTIONS]

     Apply the vsearch uchime_denovo method to identify chimeric feature
     sequences. The results of this method can be used to filter chimeric
     features from the corresponding feature table. For additional details,
     please refer to the vsearch documentation.

   Options:
     --i-sequences ARTIFACT PATH FeatureData[Sequence]
                                     The feature sequences to be chimera-checked.
                                     [required]
     --i-table ARTIFACT PATH FeatureTable[Frequency]
                                     Feature table (used for computing total
                                     feature abundances).  [required]
     --p-dn FLOAT                    No vote pseudo-count, corresponding to the
                                     parameter n in the chimera scoring function.
                                     [default: 1.4]
     --p-mindiffs INTEGER RANGE      Minimum number of differences per segment.
                                     [default: 3]
     --p-mindiv FLOAT                Minimum divergence from closest parent.
                                     [default: 0.8]
     --p-minh FLOAT                  Minimum score (h). Increasing this value
                                     tends to reduce the number of false
                                     positives and to decrease sensitivity.
                                     [default: 0.28]
     --p-xn FLOAT                    No vote weight, corresponding to the
                                     parameter beta in the scoring function.
                                     [default: 8.0]
     --o-chimeras ARTIFACT PATH FeatureData[Sequence]
                                     The chimeric sequences.  [required if not
                                     passing --output-dir]
     --o-nonchimeras ARTIFACT PATH FeatureData[Sequence]
                                     The non-chimeric sequences.  [required if
                                     not passing --output-dir]
     --o-stats ARTIFACT PATH UchimeStats
                                     Summary statistics from chimera checking.
                                     [required if not passing --output-dir]
     --output-dir DIRECTORY          Output unspecified results to a directory
     --cmd-config PATH               Use config file for command options
     --verbose                       Display verbose output to stdout and/or
                                     stderr during execution of this action.
                                     [default: False]
     --quiet                         Silence output if execution is successful
                                     (silence is golden).  [default: False]
     --help                          Show this message and exit.</pre>
       </div>
       <div id="api" class="tab-pane fade">
         <pre>De novo chimera filtering with vsearch.

   Apply the vsearch uchime_denovo method to identify chimeric feature
   sequences. The results of this method can be used to filter chimeric
   features from the corresponding feature table. For additional details,
   please refer to the vsearch documentation.

   Parameters
   ----------
   sequences : FeatureData[Sequence]
       The feature sequences to be chimera-checked.
   table : FeatureTable[Frequency]
       Feature table (used for computing total feature abundances).
   dn : Float % Range(0.0, None), optional
       No vote pseudo-count, corresponding to the parameter n in the chimera
       scoring function.
   mindiffs : Int % Range(1, None), optional
       Minimum number of differences per segment.
   mindiv : Float % Range(0.0, None), optional
       Minimum divergence from closest parent.
   minh : Float % Range(0.0, 1.0, inclusive_end=True), optional
       Minimum score (h). Increasing this value tends to reduce the number of
       false positives and to decrease sensitivity.
   xn : Float % Range(1.0, None, inclusive_start=False), optional
       No vote weight, corresponding to the parameter beta in the scoring
       function.

   Returns
   -------
   chimeras : FeatureData[Sequence]
       The chimeric sequences.
   nonchimeras : FeatureData[Sequence]
       The non-chimeric sequences.
   stats : UchimeStats
       Summary statistics from chimera checking.</pre>
       </div>
     </div>
   </div>